--- a/index.html
+++ b/index.html
@@ -1310,6 +1310,7 @@
                 .title-row h2{margin:0} 
                 .attr{padding:5px;border-radius:6px;background:#0b1220;border:1px solid #273142;margin:6px 0;display:flex;flex-direction:row;justify-content:space-between; gap:2px} 
                 .attr-header{display:flex;align-items:center;gap:10px} 
+                .attr-comments{background:#101025;color:#f1f1f1;padding:6px 10px;border-radius:6px;border-width:1px;border-style:solid;border-color:#666677;margin-top:4px;white-space:pre-line;font-size:16px} 
                 .dot{width:12px;height:12px;border-radius:50%;display:inline-block;border:1px solid rgba(255,255,255,0.06)} 
                 .links{display:flex;gap:12px;flex-wrap:wrap;align-items:center;margin-top:4px} 
                 .icon{width:18px;height:18px;vertical-align:middle;margin-left:6px;fill:currentColor}`;
@@ -1338,7 +1339,7 @@
                     const wz = `https://waze.com/ul?ll=${lat},${lng}&navigate=yes`;
                     const urlHtml = a.url ? `<a href="${a.url}" target="_blank" rel="noopener">${svgExt}</a>` : '<span style="width:20px;height:20px;display:inline-block;"></span>';
                     const timeHtml = a.time ? `<span>(${a.time})</span>` : '';
-                    const commentsHtml = a.comments ? `<div class="attr-comments" style="background:#101025;color:#f1f1f1;padding:6px 10px;border-radius:6px;border-width:1px;border-style:solid;border-color:#666677;margin-top:4px;white-space:pre-line;font-size:15px;">${a.comments.replace(/</g,'&lt;').replace(/>/g,'&gt;')}</div>` : '';
+                    const commentsHtml = a.comments ? `<div class="attr-comments">${a.comments.replace(/</g,'&lt;').replace(/>/g,'&gt;')}</div>` : '';
                     bodyHtml += `<div class="attr">
                                     <div class="attr-header">
                                         <strong>${timeHtml}</strong>${a.name || ''}
