--- a/index.html
+++ b/index.html
@@ -1305,12 +1305,12 @@
     const css = `body{font-family:Arial,Helvetica,sans-serif;background:#0b1220;color:#e5e7eb;padding:10px;line-height:1.1;margin:auto;max-width:500px}
                  h1{color:#60a5fa;margin-bottom:2px}h2{color:#bfdbfe;margin:0 0 8px 0; font-size: 18px}
                  a{color:#93c5fd;text-decoration:none} 
-                .day{background:#111827;padding:12px;border-radius:8px;margin-bottom:14px;border:1px solid #1f2937; font-size:16px} 
+                .day{background:#111827;padding:12px;border-radius:8px;margin-bottom:4px;border:1px solid #1f2937; font-size:16px} 
                 .title-row{display:flex;align-items:center;gap:10px;margin-bottom:16px} 
                 .title-row h2{margin:0} 
-                .attr{padding:5px;border-radius:6px;background:#0b1220;border:1px solid #273142;margin:6px 0;display:flex;flex-direction:row;justify-content:space-between; gap:2px} 
+                .attr{padding:2px 5px;border-radius:6px;background:#0b1220;border:1px solid #273142;margin:2px 0;display:flex;flex-direction:row;justify-content:space-between; gap:2px} 
                 .attr-header{display:flex;align-items:center;gap:10px} 
-                .attr-comments{background:#101025;color:#f1f1f1;padding:6px 10px;border-radius:6px;border-width:1px;border-style:solid;border-color:#666677;margin-top:4px;white-space:pre-line;font-size:16px} 
+                .attr-comments{background:#242434;color:#f1f1f1;padding:6px 10px;border-radius:6px;border-width:1px;border-style:solid;border-color:#666677;margin-top:4px;white-space:pre-line;font-size:16px} 
                 .dot{width:12px;height:12px;border-radius:50%;display:inline-block;border:1px solid rgba(255,255,255,0.06)} 
                 .links{display:flex;gap:12px;flex-wrap:wrap;align-items:center;margin-top:4px} 
                 .icon{width:18px;height:18px;vertical-align:middle;margin-left:6px;fill:currentColor}`;
