--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
                         <div class="flex items-center justify-between mb-4">
                             <h3 class="text-lg font-bold"><i class="fa-solid fa-map-location-dot ml-2"></i>המסלולים שלי</h3>
                             <div class="flex items-center gap-2">
-                                <button id="saveToLibraryBtn" class="px-3 py-1 bg-green-600 text-white rounded"><i class="fa-solid fa-save ml-2"></i>שמור את המסלול הנוכחי</button>
+                                <button id="fileLoaderBtn" class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700 flex items-center">
+                                    <i class="fa-solid fa-folder-open ml-2"></i>יבוא
+                                </button>
+                                <button id="saveToLibraryBtn" class="px-3 py-1 bg-green-600 text-white rounded"><i class="fa-solid fa-save ml-2"></i>שמור</button>
                                 <button id="closeSavedTripsBtn" class="px-3 py-1 bg-gray-600 text-white rounded">סגור</button>
                             </div>
                         </div>
@@ -104,9 +107,9 @@
                 <section id="editorContainer" class="hidden">
                     <!-- Editor top bar (file loader lives here) -->
                     <div class="flex items-center gap-4 bg-gray-600 text-gray-200 rounded-lg p-2 mt-16 sticky top-17 z-20 w-full">
-                        <button id="fileLoaderBtn" class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700 flex items-center">
+                        <!-- <button id="fileLoaderBtn" class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700 flex items-center">
                             <i class="fa-solid fa-folder-open ml-2"></i>יבוא מסלול
-                        </button>
+                        </button> -->
                         <!-- Trip metadata (name & description) -->
                         <div class="flex rounded">
                             <div class="flex bg-gray-800 text-gray-300 rounded">
@@ -1314,7 +1317,6 @@
                 .dot{width:12px;height:12px;border-radius:50%;display:inline-block;border:1px solid rgba(255,255,255,0.06)} 
                 .links{display:flex;gap:12px;flex-wrap:wrap;align-items:center;margin-top:4px} 
                 .icon{width:18px;height:18px;vertical-align:middle;margin-left:6px;fill:currentColor}`;
-                
 
         // Inline SVG icons
         const svgGm = `<?xml version="1.0" encoding="utf-8"?><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20" height="20" viewBox="0 0 92.25 122.88" style="enable-background:new 0 0 92.25 122.88" xml:space="preserve"><style type="text/css"><![CDATA[.st0{fill:#FF6467;}]]></style><g><path class="st0" d="M68.51,106.28c-5.59,6.13-12.1,11.62-19.41,16.06c-0.9,0.66-2.12,0.74-3.12,0.1 c-10.8-6.87-19.87-15.12-27-24.09C9.14,86.01,2.95,72.33,0.83,59.15c-2.16-13.36-0.14-26.22,6.51-36.67 c2.62-4.13,5.97-7.89,10.05-11.14C26.77,3.87,37.48-0.08,48.16,0c10.28,0.08,20.43,3.91,29.2,11.92c3.08,2.8,5.67,6.01,7.79,9.49 c7.15,11.78,8.69,26.8,5.55,42.02c-3.1,15.04-10.8,30.32-22.19,42.82V106.28L68.51,106.28z M46.12,23.76 c12.68,0,22.95,10.28,22.95,22.95c0,12.68-10.28,22.95-22.95,22.95c-12.68,0-22.95-10.27-22.95-22.95 C23.16,34.03,33.44,23.76,46.12,23.76L46.12,23.76z"/></g></svg>`;
