put agenda icons in a seperate row

--- a/index.html
+++ b/index.html
@@ -1450,7 +1450,7 @@
                 .day{background:#111827;padding:12px;border-radius:8px;margin-bottom:4px;border:1px solid #1f2937; font-size:16px} 
                 .title-row{display:flex;align-items:center;gap:10px;margin-bottom:16px} 
                 .title-row h2{margin:0} 
-                .attr{padding:2px 5px;border-radius:6px;background:#0b1220;border:1px solid #273142;margin:2px 0;display:flex;flex-direction:row;justify-content:space-between; gap:2px} 
+                .attr{padding:2px 5px;border-radius:6px;background:#0b1220;border:1px solid #273142;margin:2px 0; gap:2px} 
                 .attr-header{display:flex;align-items:center;gap:10px} 
                 .attr-comments{background:#242434;color:#f1f1f1;padding:6px 10px;border-radius:6px;border-width:1px;border-style:solid;border-color:#666677;margin-top:4px;white-space:pre-line;font-size:16px} 
                 .dot{width:12px;height:12px;border-radius:50%;display:inline-block;border:1px solid rgba(255,255,255,0.06)} 
@@ -1493,7 +1493,7 @@
                                 ${commentsHtml}`;
                 });
             } else {
-                bodyHtml += `<div class="attr">אין אטרקציות</div>`;
+                bodyHtml += `<div class="attr">אין פעילויות</div>`;
             }
             bodyHtml += `</div>`;
         });
