--- a/index.html
+++ b/index.html
@@ -1452,7 +1452,7 @@
                 .title-row h2{margin:0} 
                 .attr{padding:2px 5px;border-radius:6px;background:#0b1220;border:1px solid #273142;margin:2px 0; gap:2px} 
                 .attr-header{display:flex;align-items:center;gap:10px} 
-                .attr-comments{background:#242434;color:#f1f1f1;padding:6px 10px;border-radius:6px;border-width:1px;border-style:solid;border-color:#666677;margin-top:4px;white-space:pre-line;font-size:16px} 
+                .attr-comments{display:flex;align-items:center;gap:10px;background:#242434;color:#f1f1f1;padding:6px 10px;border-radius:6px;border-width:1px;border-style:solid;border-color:#666677;margin-top:4px;white-space:pre-line;font-size:16px} 
                 .dot{width:12px;height:12px;border-radius:50%;display:inline-block;border:1px solid rgba(255,255,255,0.06)} 
                 .links{display:flex;gap:8px;flex-wrap:wrap;align-items:center;margin-top:4px} 
                 .icon{width:18px;height:18px;vertical-align:middle;margin-left:6px;fill:currentColor}`;
